# brain-setup

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PLAN.md  README.md  SUPERBRAIN.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
brain/: __init__.py
brain/agents/: __init__.py  base.py
brain/api/: __init__.py  app.py  auth.py  container.py
brain/audit/: __init__.py  log.py
brain/cli/: main.py
brain/connectors/: __init__.py  base.py
brain/core/: context.py  logging.py  settings.py
brain/governance/: __init__.py  roles.py  tenancy.py
brain/graph/: __init__.py  cognee_client.py  graphiti_client.py  hybrid.py
brain/memory/: __init__.py  mem0_client.py  promotion.py
brain/ontology/: __init__.py  edges.py  entities.py  provenance.py
brain/tests/: test_audit.py  test_governance.py  test_ingest.py  test_ontology.py  test_promotion.py  test_tenancy.py
brain/workers/: ingest.py
context/: AUDIENCE.md  BRAND_VOICE.md  BUSINESS_PROFILE.md  COMPETITORS.md  PRODUCTS_SERVICES.md
docs/: guides.html  index.html  library.html  script.js  style.css
docs/architecture/: ONTOLOGY.md  (+4 more)
examples/: README.md
governance/: AI_POLICY.md  DATA_RULES.md  REVIEW_PROCESS.md
migrations/: 0001_init.sql  0002_ontology.sql  0003_rls.sql
onboarding/: CHECKLIST.md  QUICK_START.md  SETUP_GUIDE.md
processes/: CONTENT_WORKFLOW.md  CUSTOMER_COMMS.md  REPORTING.md
prompts/: MASTER_PROMPT.md  ROLES.md
seed/: ontology.json  roles.json  sample_tenant.json
your-business/: README.md
(+89 files in other folders)
