[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superbrain"
version = "0.1.0"
description = "Business AI brain — graph + memory + agents (Cognee + Graphiti + Mem0)"
readme = "SUPERBRAIN.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
]
postgres = [
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
]
graph = [
  # Add the real Cognee / Graphiti / Mem0 SDKs here when you wire them up:
  # "cognee>=...",
  # "graphiti-core>=...",
  # "mem0ai>=...",
]
ms = [
  # "msgraph-sdk>=1.0",
  # "msal>=1.26",
]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["brain*"]

[tool.pytest.ini_options]
testpaths = ["brain/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
